fixed line height issue when text wraps on secondary menus (issue #4)

--- a/themes/bthree/assets/css/less/header.less
+++ b/themes/bthree/assets/css/less/header.less
@@ -163,7 +163,7 @@
 .subnav .second-level .nav>li>a,
 .subnav .third-level .nav>li>a{
  padding: 15px 15px;
- 
+ line-height: 1.0em;
 }
 
 .subnav .nav>li>a:hover{
